--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,15 @@ build
 
 # other
 eclipse
-run
+!run/
+run/*
 
 # Files from Forge MDK
 forge*changelog.txt
+
+# Addon directory
+!run/mods/
+run/mods/*
+!run/mods/Ultimodum/
+run/mods/Ultimodum/*
+!run/mods/Ultimodum/AddOns
